--- a/yi18/WebContent/install/index.html
+++ b/yi18/WebContent/install/index.html
@@ -34,7 +34,7 @@ function formSubmit() {
 	
   版权所有 [00169]-[2012]，yi18.cn 保留所有权利。
 
-  感谢您使用医药吧，医药吧是一款基于JAVA企业级平台研发的医药信息系统，依托企业级JAVA的高效、安全、稳定等优势，开创国内JAVA版安全之先河。数据库使用MYSQL数据库，官方网址：www.yi.cn。
+  感谢您使用医药吧，医药吧是一款基于JAVA企业级平台研发的医药信息系统，依托企业级JAVA的高效、安全、稳定等优势，开创国内JAVA版安全之先河。数据库使用MYSQL数据库，官方网址：http://yiyaoba.aws.af.cm/。
 无论您的使用目的为何，均请先仔细阅读本许可协议，如果您安装、使用、修改或分发本软件，则表示您已经完全接受本许可协议的所有条款。
 
 一、许可
