Signed-off-by: 397713572 <397713572@qq.com>

--- a/yi18/WebContent/yi18app/index.html
+++ b/yi18/WebContent/yi18app/index.html
@@ -2,10 +2,7 @@
 <html manifest="" lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <title>医药吧-手机端</title>
-    <meta name="keywords" content="医药吧  手机端 平板电脑 药品信息、病状查找、疾病诊断、健康知识、综合资讯的综合信息网站 医药吧中国医药信息网">
-		<meta name="description" content="医药吧 中国医药信息查询平台www.yi18.cn 成立于2013年3月，是一个个人工作室开发医药辅助网站。我们传播医药技术，推广医药产品，发现最新疾病，整理病状信息，提供健康知识，传递新闻信息。为广大群众提供一个交流、展示、查询的医药性综合平台,同时打造成中国最大的医药数据库中心。经过不断的改进，目前医药吧已经形成了由药品信息、病状信息、疾病信息、健康知识和综合咨询等几大频道内容。">
-	<meta name="author" content="yi18"/>
+    <title>医药吧</title>
     <style type="text/css">
          /**
          * Example of an initial loading indicator.
@@ -52,11 +49,17 @@
             }
         }
     </style>
- 
+    <!-- The line below must be kept intact for Sencha Command to build your application -->
+  
+    <script id="microloader" type="text/javascript" src="touch/microloader/development.js"></script>
+
+ <!--
 <link rel="stylesheet" type="text/css" href="resources/css/sencha-touch.css">
   <script type="text/javascript" src="touch/sencha-touch-all.js"></script>
 
    <script type="text/javascript" src="app.js"></script>
+   
+   -->
    
 </head>
 <body>
